px4_ws/logs/px4_offboard/build.make.016.log.stderr
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp: In member function 'void Mission::wallCallback(geometry_msgs::Point)':
/home/odroid/MAV-Project/px4_ws/src/px4_offboard/src/Mission.cpp:223:5: error: 'mission' was not declared in this scope
     mission.publish();
     ^
make[2]: *** [CMakeFiles/mission.dir/src/Mission.cpp.o] Error 1
make[1]: *** [CMakeFiles/mission.dir/all] Error 2
make: *** [all] Error 2
